Changed body colour because it was hard to read and bugging me

--- a/templates/athyonlinetemplate/css/template.css
+++ b/templates/athyonlinetemplate/css/template.css
@@ -5,7 +5,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-size: 13px;
-    color: #666;
+    color: #39383A;
 }
 a{
     color: #444;
